[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

[lib]
name = "xdiff"
path = "src/lib.rs"
## staticlib to generate xdiff.a for use by gcc
## cdylib (optional) to generate xdiff.so for use by gcc
## rlib is required by the rust unit tests
crate-type = ["staticlib", "rlib"]

[dependencies]
interop = { path = "../interop" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
